# OpenDerisk

./: .gitignore  FOR_DEVELOPERS.md  GETTING_STARTED.md  MODEL_DELETION_FIX_REPORT.md  Makefile  PROJECT_MINDMAP.md  PROJECT_MINDMAP_MERMAID.md  README.ja.md  README.md  README.zh.md  derisk.json  docker-compose.yml  install.sh  pyproject.toml  start.sh
bun/: README.md  index.ts  package.json
configs/: derisk-distributed.toml  derisk-minimal.toml  derisk-ob.toml  derisk-proxy-aliyun.toml  derisk-proxy-openai.toml  hierarchical_context_config.yaml
docs/: AGENT_ALIAS_FIX_SUMMARY.md  AGENT_ALIAS_IMPLEMENTATION_COMPLETE.md  AGENT_ALIAS_IMPLEMENTATION_SUMMARY.md  AGENT_ALIAS_REFACTOR.md  AGENT_ALIAS_STARTUP_GUIDE.md  AGENT_ALIAS_SYSTEM.md  AGENT_ARCHITECTURE_REFACTOR.md  AGENT_HARNESS_COMPLETE_REPORT.md  ANALYSIS_RESULTS.md  ASYNC_TASK_SYSTEM.md  ASYNC_TASK_SYSTEM_EN.md  CANVAS_VISUALIZATION_GUIDE.md  COMPRESSION_LAYERS_FILE_INVENTORY.md  COMPRESSION_LAYERS_INDEX.md  COMPRESSION_LAYERS_MAPPING.md  COMPRESSION_LAYERS_QUICK_REFERENCE.md  CORE_V2_AGENT_IMPLEMENTATION_PLAN.md  CORE_V2_APP_INTEGRATION_GUIDE.md  CORE_V2_DEVELOPMENT_COMPLETE.md  CORE_V2_INTEGRATION_SOLUTION.md  CORE_V2_VERSION_SWITCH.md  DISCKAIMER.md  FINAL_COMPLETION_SUMMARY.md  FIXES_APPLIED.md  FOUR_LAYER_COMPRESSION_IMPLEMENTATION.md  FULL_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_CHECKLIST.md  MULTIMODAL_IMPLEMENTATION_SUMMARY.md  MULTIMODAL_MODEL_CONFIG.md  OPENCODE_VISUALIZATION_ANALYSIS.md  QUICKSTART.md  REACT_MASTER_V2_LOOP_BUG_FIX.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_IMPLEMENTATION_SUMMARY.md  REFACTOR_PLAN.md  SERVER_STARTUP_GUIDE.md  SOLUTION_SUMMARY.md  UNIFIED_MEMORY_INTEGRATION_REPORT.md  V1_V2_INTEGRATION_GUIDE.md  (+6 more)
homebrew/: README.md  openderisk.rb
meta_data/: alembic.ini  derisk.db
npm/: README.md  index.js  package.json
scripts/: build_web_static.sh  mysql_ddl.sql  prepare_release.sh  run_llm_benchmarks.sh  setup_autodl_env.sh  start_server.sh
tests/: debug_alias_registration.py  (+16 more)
(+320 files in other folders)
